force-app/main/default/objects/Ledger_Entry__c/Ledger_Entry__c.object-meta.xml
<CustomObject>
    <label>Ledger Entry</label>
    <pluralLabel>Ledger Entries</pluralLabel>
    <nameField>
        <label>Ledger Entry Number</label>
        <displayFormat>LED-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Distributor financial ledger tracking invoices, credit notes, debit notes, payments, and adjustments for SFA distribution management</description>
</CustomObject>