force-app/main/default/objects/Ledger_Entry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>