force-app/main/default/objects/Ledger_Entry__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <type>Lookup</type>
    <referenceTo>Collection__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>