force-app/main/default/objects/Ledger_Entry__c/fields/Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User__c</fullName>
    <label>Created By User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ledger Entries Created</relationshipLabel>
    <relationshipName>Ledger_Entries_Created</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>