force-app/main/default/objects/Ledger_Entry__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Debit Note</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>