force-app/main/default/objects/Ledger_Entry__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Ledger Entries</relationshipLabel>
    <relationshipName>Ledger_Entries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>