force-app/main/default/objects/Ledger_Entry__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <label>Reference Number</label>
    <type>Text</type>
    <length>100</length>
</CustomField>