force-app/main/default/objects/Ledger_Entry__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>