force-app/main/default/objects/Ledger_Entry__c/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <label>Running Balance</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>